--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,3 +63,7 @@
 .topnav a:hover {
   background-color: #ddd;
   color: black; }
+  .vl {
+    border-left: 2px solid #5bd086;
+    height: 500px;
+  }
