--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,8 @@
 .topnav a:hover {
   background-color: #ddd;
   color: black; }
-  .vl {
+
+.vl {
     border-left: 2px solid #5bd086;
-    height: auto;
-  }
+    height: 150px;
+}
