--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,5 @@
 .vl {
     border-left: 2px solid #5bd086;
     height: 100%;
-    margin-right: 5px;
-    margin-left: 5px;
+    padding-left: 5px;
 }
