--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@
   color: black; }
 
 .vl {
-    border: 2px solid #5bd086;
+    border-left: 2px solid #7affab;
     height: 100%;
     padding-left: 25px;
 }
