--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,3 +69,10 @@
     height: 100%;
     padding-left: 25px;
 }
+
+.vl2 {
+  border-right: 2px solid #90FFB9;
+  border-left: 2px solid #90FFB9;
+  height: 100%;
+  padding-left: 25px;
+}
