--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
 }
 @font-face {
   font-family: 'Bubble';
-  src: url(assets/Fonts/Neue.ttf);
+  src: url(assets/Fonts/bubblethin.ttf);
 }
 
 .Main-font {
