--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,13 @@
     height: 100%;
     padding-left: 25px;
 }
-
+@media (min-width: 640px) {
+  .sm\:vl2 {
+    border-top: 2px solid #90FFB9;
+    height: 100%;
+    padding-top: 25px;
+  }
+}
 .vl2 {
   border-top: 2px solid #90FFB9;
   height: 100%;
