--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,6 +70,13 @@
     padding-left: 25px;
 }
 @media (min-width: 640px) {
+  .sm\:vl {
+    border-left: 2px solid #90FFB9;
+    height: 100%;
+    padding-left: 25px;
+  }
+}
+@media (min-width: 640px) {
   .sm\:vl2 {
     border-top: 2px solid #90FFB9;
     height: 100%;
