--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,9 @@
   right: 0;
   top: 0;
 }
-
+.NavBtn {
+  @apply hover:#fdba74;
+}
 .topnav a:hover {
   background-color: #ddd;
   color: black; }
